[tool.poetry]
name = "strana"
version = "0.1.0"
description = ""
authors = ["Arseny Sysolyation <as@idaproject.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "~2.8.5"
boto3 = "~1.13.20"
Pillow-SIMD = "~7.0.0.post3"
sentry-sdk = "~0.14.4"
ua-parser = "~0.10.0"
user-agents = "~2.1"
gunicorn = "~20.0.4"
requests = "~2.23.0"
phonenumberslite = "~8.12.4"
Django = "~3.0.6"
django-phonenumber-field ="~4.0.0"
django-redis-cache = "3.0.0"
django-hashedfilenamestorage = {git = "https://github.com/ecometrica/django-hashedfilenamestorage.git", rev = "9a3b1d1b74ae96a84dac4cf5bd1c9b6dfce2d7a3"} # При установки из pipy неверно вычисляются зависимости
django-filter = "~2.2.0"
django-storages = "~1.9.1"
django-ckeditor = "~5.9.0"
django-celery-email = "~3.0.0"
django-imagekit = {git = "https://github.com/matthewwithanm/django-imagekit.git", rev = "3317273401d65b1d2c70c635e22132998f957290"} # Совместимость с Django 2.2
django-ajax-image-upload = "~0.9.4"
django-user-agents = "~0.4.0"
django-admin-sortable2 = "~0.7.6"
django-admin-rangefilter = "~0.6.0"
django-admin-list-filter-dropdown = "~1.0.3"
django-select2 = "~7.4.2"
django-solo = "~1.1.3"
django-multi-email-field = "~0.6.1"
django-colorful = "~1.3.0"
# Django Rest Framework
djangorestframework = "~3.12.*"
drf-tracking = {git ='https://github.com/aschn/drf-tracking.git', branch = "master"}
# Celery
celery = "~4.4.3"
# Testing
factory-boy = "~2.12.0"
coverage = "~5.1.0"
tblib = "^1.7.0" # parallel test
# Graphene
django-graphiql-debug-toolbar = "0.1.4"
django-graphql-extensions = "0.0.6"
graphene-django-optimizer = "0.6.2"

# Test beta version graphene
graphene-django = "2.12.1"
flower = "^0.9.5"
django-robots = "^4.0"
django-nested-admin = "^3.3.3"
django-cors-headers = "^3.7.0"
django-extensions = "^3.1.3"
objgraph = "^3.5.0"
drf-spectacular = "^0.24.0"
django-import-export = "^2"
dadata = "^21.10.1"
haversine = "^2.7.0"
drf-writable-nested = "^0.7.0"
retry = "^0.9.2"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^3.2"
python-logstash = "^0.4.8"
python-dotenv = "^0.21.0"

[tool.black]
line-length = 100

[tool.isort]
src_paths = [
    "app", "buildings", "cities", "commercial_property_page", "company",
    "dvizh_api", "favorite", "infras", "investments", "landowners",
    "main_page", "news", "pop_ups", "projects", "purchase", "sitemap",
    "vacancy", "amocrm", "auction", "caches", "commercial_project_page",
    "common", "contacts", "experiments", "feeds", "instagram", "landing",
    "location", "mortgage", "panel_manager", "profitbase", "properties",
    "request_forms", "users", "vk"
]
skip = ["migrations"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


