[tool.poetry]
name = "StranaLK"
version = "0.1.0"
description = "Личный кабинет Страна Деволпмент"
authors = ["Bogdan <bb@idaporject.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
gunicorn = "^20.0.4"
alembic = "^1.5.4"
psycopg2-binary = "^2.8.6"
aiohttp = "^3.7.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^1.1.2"
phonenumbers = "^8.12.18"
python-multipart = "^0.0.5"
asynctest = "^0.13.0"
httpx = "^0.16.1"
pytest-asyncio = "^0.14.0"
aiographql-client = "^1.0.2"
aiofile = "^3.3.3"
uvicorn = {extras = ["standart"], version = "^0.13.4"}
uvloop = "^0.15.2"
httptools = "^0.1.1"
websockets = "^8.1"
urllib3 = "^1.26.4"
pytest-cov = "^2.11.1"
celery = "^5.0.5"
redis = "^3.5.3"
sentry_sdk = "^1.0.0"
asgiref = "^3.3.1"
mock = "^4.0.3"
pytest-mock = "^3.5.1"
aioredis = "^1.3.1"
fastapi-mail = "^0.3.5"
jinja2 = "^2.11.3"
#cryptography = "^3.4.7"
python-jose = "^3.2.0"
num2words = "^0.5.10"
asyncpg = "^0.23.0"
Pillow = "^8.2.0"
Faker = "^8.5.0"
pytest-xdist = "^2.2.1"
wsproto = "^1.0.0"
aioboto3 = "^9.0.0"
tortoise-orm = "0.17.8"
aerich = "^0.5.8"
structlog = "^22.1.0"
python-dotenv = "^0.20.0"
MarkupSafe = "2.0.1"
pytest = "7.2.2"
deepdiff = "6.3.0"
ujson = "^5.7.0"
aiolimiter = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
requests = "^2.25.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
