[tool.poetry]
name = "StranaLK"
version = "0.1.0"
description = "Личный кабинет Страна Деволпмент"
authors = ["artw"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.0"
gunicorn = "^20.0.4"
alembic = "^1.5.4"
psycopg2-binary = "^2.8.6"
aiohttp = "^3.7.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^1.1.2"
phonenumbers = "^8.12.18"
python-multipart = "^0.0.5"
asynctest = "^0.13.0"
httpx = "^0.24.1"
pytest-asyncio = "^0.14.0"
aiographql-client = "^1.0.2"
aiofile = "^3.3.3"
uvicorn = "0.23.2"
uvloop = "^0.17.0"
httptools = "^0.5.0"
websockets = "^11.0.0"
urllib3 = "^1.26.4"
pytest-cov = "^2.11.1"
celery = "^5.0.5"
redis = "^5.0.0"
sentry_sdk = "^1.29.2"
asgiref = "^3.3.1"
mock = "^4.0.3"
pytest-mock = "^3.5.1"
aioredis = "^1.3.1"
fastapi-mail = "^0.3.5"
jinja2 = "^2.11.3"
#cryptography = "^3.4.7"
python-jose = "^3.2.0"
num2words = "^0.5.10"
asyncpg = "^0.27.0"
Pillow = "^10.0.0"
Faker = "^8.5.0"
pytest-xdist = "^2.2.1"
wsproto = "^1.0.0"
aioboto3 = "^11.0.0"
tortoise-orm = "0.19.3"
aerich = "^0.7.2"
structlog = "^22.1.0"
python-dotenv = "^0.20.0"
MarkupSafe = "2.0.1"
pytest = "^7.2.2"
deepdiff = "^6.3.0"
ujson = "^5.7.0"
unleashclient = "^5.8.0"
aiolimiter = "^1.1.0"
icecream = "^2.1.3"
dadata = "^21.10.1"
haversine = "^2.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
black = "^23.9.1"
mypy = "^1.5.1"
requests = "^2.25.1"


[tool.aerich]
tortoise_orm = "config.aerich_config"
location = "./migrations"
src_folder = "./."


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = 3.11
disallow_untyped_defs = true  # запрещает объявлять функции без аннотации типов
no_implicit_optional = true  # без этой опции аргументы функции могут иметь тип None в качестве параметра по-умолчанию. С этой опцией такое неявное поведение запрещено, а гарантии типов сохранены
warn_return_any = true  # если в качестве возвращаемого типа было указано Any
check_untyped_defs = true  # проверяет корректность типизации в функции без аннотаций
strict = false  # включает все опциональные дополнительные проверки
warn_unreachable = true  # сообщает, если какой-то кусок кода никогда не выполнается
disallow_any_explicit = false
disallow_any_generics = false
show_column_numbers = true
show_error_context = true
pretty = true
show_absolute_path = true
show_error_codes = true
warn_unused_configs = true

# Enable pydantic mypy plugin.
plugins = [
    "pydantic.mypy",
]
exclude = [
    "venv*",
]

